# lan-racer

./: .gitignore  Cargo.toml  Makefile  README.md  flake.nix
.direnv/: flake-profile-1-link
router/: Cargo.toml
router/src/: event.rs  lib.rs  main.rs  peer.rs  router.rs
router/src/signaling/: client.rs  mod.rs  protocol.rs  server.rs
