[package]
name = "router"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
bytes = "1.11.0"
chrono = "0.4.42"
clap = "4.5.53"
futures = "0.3.31"
iced = { version = "0.13.1", features = ["debug", "tokio"] }
iced_aw = { version = "0.12", features = ["context_menu", "card"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.17"
tun-rs = { version = "2.7.5", features = ["async"] }
webrtc = "0.14.0"
